<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Capstone</string>
    <string name="calorie">2126</string>
    <string name="calorie_caption">Your Calorie Needs</string>
    <string name="search_hint">Search Your Activity Here</string>
    <string name="activity_name">Activity Name</string>
    <string name="activity_added">Activity Name</string>
    <string name="duration">DURATION : </string>
    <string name="hours">HOURS</string>
    <string name="minutes">MINUTES</string>
    <string name="caption_button_check">CHECK YOUR FOOD RECOMMENDATION</string>
    <string name="tab_list_activity">Activity List</string>
    <string name="tab_added_activity">Activity Added</string>
    <string name="foodin">FOODIN</string>
    <string name="setting">Setting</string>
    <string name="here_result">HERE IS THE RESULT</string>
    <string name="set1_result">SET 1</string>
    <string name="set2_result">SET 2</string>
    <string name="set3_result">SET 3</string>
    <string name="set_detail">SET 1</string>
    <string name="breakfast">BREAKFAST</string>
    <string name="food_breakfast">Food : Fried Rice, Egg</string>
    <string name="drink_breakfast">Drink: Milk</string>
    <string name="fruit_breakfast">Fruit: Mango</string>
    <string name="brunch">BRUNCH</string>
    <string name="food_brunch">Food : Satay</string>
    <string name="drink_brunch">Drink: Apel Juice</string>
    <string name="fruit_brunch">Fruit: Banana</string>
    <string name="lunch">LUNCH</string>
    <string name="food_lunch">Food : Rice, Tofu</string>
    <string name="drink_lunch">Drink : Orange Juice</string>
    <string name="fruit_lunch">Fruit : Avocado</string>
    <string name="dinner">DINNER</string>
    <string name="food_dinner">Food : Salad</string>
    <string name="drink_dinner">Drink : Mineral Water</string>
    <string name="fruit_dinner">Fruit : Orange</string>
    <string name="weight_target">YOUR WEIGHT TARGET IS: </string>
    <string name="next_button">NEXT</string>
    <string name="logout">Logout</string>
    <string name="foodin_welcome">FOODIN</string>
    <string name="food_recommendation_welcome">FOOD RECOMMENDATION APP</string>
    <string name="welcome">WELCOME</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="caption_welcome">The application is designed to make it easier for people to maintain
healthy food consumption and recommendations that can lead to
“4 sehat 5 sempurna” . We want to help  Indonesians to be healthy
citizens in controlling their food consumption by giving food
recommendations based on their activity and calorie requirement.</string>
    <string name="invalid_password">Password should have at least 6 characters</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="choose_goals">CHOOSE  YOUR
        GOALS</string>
    <string name="gain_weight">Gain Weight</string>
    <string name="maintain_weight">Maintain Weight</string>
    <string name="loss_weight">Loss Weight</string>
    <string name="current_weight">YOUR CURRENT WEIGHT IS: </string>
    <string name="current_height">YOUR CURRENT HEIGHT IS: </string>
    <string name="current_age">YOUR CURRENT AGE IS: </string>
    <string name="gender">YOUR GENDER IS: </string>
    <string name="name">Name </string>
    <string name="food_caption"> Food</string>
    <string name="vegetable_caption"> Vegetable</string>
    <string name="fruit_caption"> Fruit</string>

    <string-array name="activity_name_list">
        <item>SCHOOL</item>
        <item>GYM</item>
        <item>WORK</item>
        <item>RIDING</item>
        <item>GAMING</item>
        <item>STROLLING AROUND</item>
        <item>COLLAGE</item>
        <item>BASKET</item>
        <item>FOOTBALL</item>
        <item>VOLLEY</item>
    </string-array>

    <string-array name="activity_added_list">
        <item>RIDING</item>
        <item>GAMING</item>
        <item>STROLLING AROUND</item>
        <item>COLLAGE</item>
        <item>VOLLEY</item>
    </string-array>

    <string-array name="result_list">
        <item>SET 1</item>
        <item>SET 2</item>
        <item>SET 3</item>
        <item>SET 4</item>
        <item>SET 5</item>
    </string-array>

    <integer-array name="result_photo_list">
        <item>@drawable/logo</item>
        <item>@drawable/logo</item>
        <item>@drawable/logo</item>
        <item>@drawable/logo</item>
        <item>@drawable/logo</item>
    </integer-array>

    <string-array name="gender">
        <item>MALE</item>
        <item>FEMALE</item>
    </string-array>

</resources>