<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activity.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/photo_detail"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.144"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.025"
            app:srcCompat="@drawable/logo" />


        <TextView
            android:id="@+id/set_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rambla"
            android:text="@string/set_detail"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.697"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.056"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/bg_blue_detail"
            android:layout_width="match_parent"
            android:layout_height="750dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bgblue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photo_detail"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rambla"
            android:text="@string/breakfast"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bg_blue_detail"
            app:layout_constraintVertical_bias="0.021" />

        <TextView
            android:id="@+id/line_breakfast"
            android:layout_width="150dp"
            android:layout_height="8dp"
            android:background="@drawable/rectangle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/breakfast"
            app:layout_constraintVertical_bias="0.016"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/food_breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rambla"
            android:text="@string/food_breakfast"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/bg_blue_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line_breakfast"
            app:layout_constraintVertical_bias="0.021"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/drink_breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rambla"
            android:text="@string/drink_breakfast"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.036"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/food_breakfast"
            app:layout_constraintVertical_bias="0.017"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/fruit_breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rambla"
            android:text="@string/fruit_breakfast"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.038"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/drink_breakfast"
            app:layout_constraintVertical_bias="0.018"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/brunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rambla"
            android:text="@string/brunch"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/bg_blue_detail"
            app:layout_constraintHorizontal_bias="0.038"
            app:layout_constraintStart_toStartOf="@+id/bg_blue_detail"
            app:layout_constraintTop_toTopOf="@+id/bg_blue_detail"
            app:layout_constraintVertical_bias="0.273"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/line_brunch"
            android:layout_width="150dp"
            android:layout_height="8dp"
            android:background="@drawable/rectangle"
            app:layout_constraintBottom_toBottomOf="@+id/bg_blue_detail"
            app:layout_constraintEnd_toEndOf="@+id/bg_blue_detail"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="@+id/bg_blue_detail"
            app:layout_constraintTop_toBottomOf="@+id/brunch"
            app:layout_constraintVertical_bias="0.027"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/food_brunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rambla"
            android:text="@string/food_brunch"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/bg_blue_detail"
            app:layout_constraintHorizontal_bias="0.037"
            app:layout_constraintStart_toStartOf="@+id/bg_blue_detail"
            app:layout_constraintTop_toBottomOf="@+id/line_brunch"
            app:layout_constraintVertical_bias="0.025"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/drink_brunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rambla"
            android:text="@string/drink_brunch"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/bg_blue_detail"
            app:layout_constraintEnd_toEndOf="@+id/bg_blue_detail"
            app:layout_constraintHorizontal_bias="0.042"
            app:layout_constraintStart_toStartOf="@+id/bg_blue_detail"
            app:layout_constraintTop_toBottomOf="@+id/food_brunch"
            app:layout_constraintVertical_bias="0.02"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/fruit_brunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rambla"
            android:text="@string/fruit_brunch"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/bg_blue_detail"
            app:layout_constraintEnd_toEndOf="@+id/bg_blue_detail"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="@+id/bg_blue_detail"
            app:layout_constraintTop_toBottomOf="@+id/drink_brunch"
            app:layout_constraintVertical_bias="0.022"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/lunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rambla"
            android:text="@string/lunch"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.035"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bg_blue_detail"
            app:layout_constraintVertical_bias="0.519" />

        <TextView
            android:id="@+id/line_lunch"
            android:layout_width="150dp"
            android:layout_height="8dp"
            android:background="@drawable/rectangle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lunch"
            app:layout_constraintVertical_bias="0.031"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/food_lunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rambla"
            android:text="@string/food_lunch"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line_lunch"
            app:layout_constraintVertical_bias="0.035"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/drink_lunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rambla"
            android:text="@string/drink_lunch"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/food_lunch"
            app:layout_constraintVertical_bias="0.051"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/fruit_lunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rambla"
            android:text="@string/fruit_lunch"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/bg_blue_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.041"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/drink_lunch"
            app:layout_constraintVertical_bias="0.05"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/dinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rambla"
            android:text="@string/dinner"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.037"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bg_blue_detail"
            app:layout_constraintVertical_bias="0.786" />

        <TextView
            android:id="@+id/line_dinner"
            android:layout_width="150dp"
            android:layout_height="8dp"
            android:layout_marginBottom="76dp"
            android:background="@drawable/rectangle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dinner"
            app:layout_constraintVertical_bias="0.14"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/food_dinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rambla"
            android:text="@string/food_dinner"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/bg_blue_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.038"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line_dinner"
            app:layout_constraintVertical_bias="0.113"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/drink_dinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rambla"
            android:text="@string/drink_dinner"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/bg_blue_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/food_dinner"
            app:layout_constraintVertical_bias="0.181"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/fruit_dinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rambla"
            android:text="@string/fruit_dinner"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/drink_dinner"
            app:layout_constraintVertical_bias="0.264"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>